--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       top: 42.315px;
       position: absolute;
       animation: ldio-4khtpk1mo8v linear 2.127659574468085s infinite;
-      background: #3386FF;
+      background: #265D93;
       width: 19.53px;
       height: 19.53px;
       border-radius: 9.765px / 9.765px;
@@ -34,47 +34,47 @@
     }.ldio-4khtpk1mo8v div:nth-child(1) {
        transform: rotate(0deg);
        animation-delay: -1.9342359767891684s;
-       background: #3386FF;
+       background: #265D93;
      }.ldio-4khtpk1mo8v div:nth-child(2) {
         transform: rotate(32.72727272727273deg);
         animation-delay: -1.7408123791102514s;
-        background: #3386FF;
+        background: #265D93;
       }.ldio-4khtpk1mo8v div:nth-child(3) {
          transform: rotate(65.45454545454545deg);
          animation-delay: -1.5473887814313347s;
-         background: #3386FF;
+         background: #265D93;
        }.ldio-4khtpk1mo8v div:nth-child(4) {
           transform: rotate(98.18181818181819deg);
           animation-delay: -1.3539651837524178s;
-          background: #3386FF;
+          background: #265D93;
         }.ldio-4khtpk1mo8v div:nth-child(5) {
            transform: rotate(130.9090909090909deg);
            animation-delay: -1.1605415860735009s;
-           background: #3386FF;
+           background: #265D93;
          }.ldio-4khtpk1mo8v div:nth-child(6) {
             transform: rotate(163.63636363636363deg);
             animation-delay: -0.9671179883945842s;
-            background: #3386FF;
+            background: #265D93;
           }.ldio-4khtpk1mo8v div:nth-child(7) {
              transform: rotate(196.36363636363637deg);
              animation-delay: -0.7736943907156674s;
-             background: #3386FF;
+             background: #265D93;
            }.ldio-4khtpk1mo8v div:nth-child(8) {
               transform: rotate(229.0909090909091deg);
               animation-delay: -0.5802707930367504s;
-              background: #3386FF;
+              background: #265D93;
             }.ldio-4khtpk1mo8v div:nth-child(9) {
                transform: rotate(261.8181818181818deg);
                animation-delay: -0.3868471953578337s;
-               background: #3386FF;
+               background: #265D93;
              }.ldio-4khtpk1mo8v div:nth-child(10) {
                 transform: rotate(294.54545454545456deg);
                 animation-delay: -0.19342359767891684s;
-                background: #3386FF;
+                background: #265D93;
               }.ldio-4khtpk1mo8v div:nth-child(11) {
                  transform: rotate(327.27272727272725deg);
                  animation-delay: 0s;
-                 background: #3386FF;
+                 background: #265D93;
                }
     .loadingio-spinner-spinner-rl7w6qbl47d {
       width: 217px;
@@ -96,15 +96,140 @@
 </div>
 
 <header class="header">
-
+  <div class="menu">
+    <ul class="menu__wrap">
+      <li class="menu__item">
+        <a href="#" class="menu__item_link">Головна</a>
+      </li>
+      <li class="menu__item">
+        <a href="#" class="menu__item_link">Хірургічний напрямок</a>
+      </li>
+      <li class="menu__item">
+        <a href="#" class="menu__item_link">Терапевтичний напрямок</a>
+      </li>
+      <li class="menu__item">
+        <a href="#" class="menu__item_link">Авіаційна медицина</a>
+      </li>
+      <li class="menu__item">
+        <a href="#" class="menu__item_link">Медична реабілітація</a>
+      </li>
+      <li class="menu__item">
+        <a href="#" class="menu__item_link">Діагностичний напрямок</a>
+      </li>
+      <li class="menu__item">
+        <a href="#" class="menu__item_link">
+          <img src="./dist/img/header-fb.svg"
+               width="30"
+               height="30"
+               alt="img">
+        </a>
+      </li>
+    </ul>
+  </div>
 </header>
 
 <main class="main">
 
+  <div class="page-header">
+    <img src="./dist/img/logo.png"
+         alt="img"
+         width="85"
+         height="93"
+         class="page-header__img">
+    <p class="page-header__text">Військово-медичний клінічний центр центрального регіону <br>MILITARY MEDICAL CLINICAL CENTER OF CENTRAL REGION</p>
+  </div>
+
+  <div class="breadcrumbs">
+    <a href="#" class="breadcrumbs__link">Головна  \  </a>
+    <p class="breadcrumbs__current">Керівний склад</p>
+  </div>
+
+  <h1 class="page-title">КЕРІВНИЙ СКЛАД</h1>
+
+  <div class="list">
+
+    <div class="list__item">
+      <div class="list__item_img" style="background-image: url('./dist/img/img1.png');"></div>
+      <p class="list__item_caption">Пашковський Сергій
+        <br>Миколайович</p>
+      <p class="list__item_text">Начальник Військово-медичного
+        <br>клінічного центру Центрально регіону,
+        <br>полковник медичної служби</p>
+    </div>
+    <div class="list__item">
+      <div class="list__item_img" style="background-image: url('./dist/img/img2.png');"></div>
+      <p class="list__item_caption">Столяренко Олександр
+        <br>Олександрович</p>
+      <p class="list__item_text">Заступник начальника центру,
+        <br>полковник медичної служби</p>
+    </div>
+    <div class="list__item">
+      <div class="list__item_img" style="background-image: url('./dist/img/img3.png');"></div>
+      <p class="list__item_caption">Мельник Ігор
+        <br>Петрович</p>
+      <p class="list__item_text">Заступник начальника центру з медичної
+        <br>частини – начальник медичної служби,
+        <br>полковник медичної служби</p>
+    </div>
+    <div class="list__item">
+      <div class="list__item_img" style="background-image: url('./dist/img/img4.png');"></div>
+      <p class="list__item_caption">Марцинковський Ігор
+        <br>Павлович</p>
+      <p class="list__item_text">Провідний хірург (регіону),
+        <br>полковник медичної служби</p>
+    </div>
+    <div class="list__item">
+      <div class="list__item_img" style="background-image: url('./dist/img/img5.png');"></div>
+      <p class="list__item_caption">Сивак Віктор
+        <br>Георгійович</p>
+      <p class="list__item_text">Провідний терапевт (регіону),
+        <br>полковник медичної служби</p>
+    </div>
+    <div class="list__item">
+      <div class="list__item_img" style="background-image: url('./dist/img/img6.png');"></div>
+      <p class="list__item_caption">Ковальчук Анатолій
+        <br>Миколайович</p>
+      <p class="list__item_text">Заступник начальника центру
+        <br>з логістики, полковник</p>
+    </div>
+
+  </div>
+
 </main>
 
 <footer class="footer">
-
+  <div class="footer__wrap">
+    <div class="footer__col first">
+      <img src="./dist/img/logo.png"
+           loading="lazy"
+           width="99"
+           class="footer__col_logo"
+           height="110"
+           alt="img">
+      <p class="footer__col_caption">Графік роботи</p>
+      <p class="footer__col_text">Цілодобово</p>
+    </div>
+    <div class="footer__col second">
+      <p class="footer__col_caption">Контакти</p>
+      <p class="footer__col_text tel">53-18-15 – приймальня командира</p>
+      <p class="footer__col_text location">21018, м.Вінниця, вул. Князів Коріатовичів, 185</p>
+      <a href="#" class="footer__col_text fb">Facebook</a>
+    </div>
+    <div class="footer__col third">
+      <p class="footer__col_caption">Навігація</p>
+      <a href="#" class="footer__col_min-text">Головна</a>
+      <a href="#" class="footer__col_min-text">Терапевтичний напрямок</a>
+      <a href="#" class="footer__col_min-text">Медична реабілітація</a>
+      <a href="#" class="footer__col_min-text">Клініка амбулаторно-
+        <br>поліклінічноі допомоги</a>
+    </div>
+    <div class="footer__col last">
+      <p class="footer__col_caption hide">Навігація</p>
+      <a href="#" class="footer__col_min-text">Хірургічний напрямок</a>
+      <a href="#" class="footer__col_min-text">Авіаційна медицина</a>
+      <a href="#" class="footer__col_min-text">Діагностичний напрямок</a>
+    </div>
+  </div>
 </footer>
 
 </body>
